<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/lets_begin"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:fontFamily="@font/cabin"
            android:hint="@string/your_name"
            android:backgroundTint="@color/black"
            android:textSize="24sp"
            android:padding="20dp"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:textColor="@color/white"
            android:fontFamily="@font/cabin"
            android:backgroundTint="@color/light_purple"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>


</RelativeLayout>









